# hexapod

./: .gitignore  README.md  test.txt
src/circle_traj_generator/: CMakeLists.txt  package.xml
src/circle_traj_generator/src/: circle_traj_generator.cpp
src/ds4_control/: CMakeLists.txt  package.xml
src/ds4_control/src/: ds4_control.cpp
src/dynamixel_control/: CMakeLists.txt  package.xml
src/dynamixel_control/config/: dynamixel_joint_controllers.yaml
src/dynamixel_control/launch/: controller_spawner.launch
src/dynamixel_control/src/: dynamixel_control.cpp  dynamixel_read.cpp  dynamixel_write.cpp
src/geometry_constraints/: CMakeLists.txt  package.xml
src/hexapod_scarab/: CMakeLists.txt  hexapod_leg.rviz  package.xml
src/hexy_command/: CMakeLists.txt  package.xml
src/hexy_gazebo/: CMakeLists.txt  package.xml
src/hexy_gazebo_publisher/: CMakeLists.txt  package.xml
src/hexy_joint_publisher/: CMakeLists.txt  package.xml
src/hexy_lib/: CMakeLists.txt  package.xml
src/hexy_moving/: CMakeLists.txt  package.xml
src/hexy_msgs/: CMakeLists.txt  package.xml
src/leg_forw_kinematic/: CMakeLists.txt  package.xml
src/leg_inv_kinematic/: CMakeLists.txt  package.xml
src/leg_joint_publisher/: CMakeLists.txt  package.xml
src/leg_msgs/: CMakeLists.txt  package.xml
src/visual_model/: CMakeLists.txt  package.xml
src/visual_model/launch/: hexy_model.launch  leg_hardware.launch  leg_simulation.launch
src/visual_model/rviz/: hexy.rviz
src/visual_model/urdf/: hexapod_leg.xacro  hexapod_leg_processed.urdf  hexy_description.xacro
(+65 files in other folders)
